#5582 Add data snapshots for audit trail