@@ -24,9 +24,11 @@ import stroom.docstore.shared.DocDataType;
 import stroom.importexport.api.ByteArrayImportExportAsset;
 import stroom.importexport.api.ImportExportDocument;
 import stroom.test.AbstractCoreIntegrationTest;
+import stroom.util.json.JsonUtil;
 
 import jakarta.inject.Inject;
 import org.junit.jupiter.api.Test;
+import tools.jackson.databind.json.JsonMapper;
 
 import java.io.IOException;
 import java.nio.charset.Charset;
@@ -40,6 +42,36 @@ class TestDBPersistence extends AbstractCoreIntegrationTest {
 
     private static final Charset CHARSET = StandardCharsets.UTF_8;
 
+    private static final String META_JSON_1 = """
+            {
+              "type": "XSLT",
+              "uuid": "%s",
+              "name": "EMBEDDED XSLT (translationFilter)",
+              "version": "ba97a81f-c8e6-4d34-8ea8-a9808e89ced4",
+              "createTimeMs": 1769686495941,
+              "updateTimeMs": 1769686587789,
+              "createUser": "admin",
+              "updateUser": "admin",
+              "embeddedIn": {
+                "type": "Pipeline",
+                "uuid": "%s",
+                "name": "my pipeline"
+              }
+            }""";
+
+    private static final String META_JSON_2 = """
+            {
+              "type": "Pipeline",
+              "uuid": "%s",
+              "name": "Pipeline",
+              "version": "ba97a81f-c8e6-4d34-8ea8-a9808e89ced4",
+              "createTimeMs": 1769686495941,
+              "updateTimeMs": 1769686587789,
+              "createUser": "admin",
+              "updateUser": "admin"
+            }""";
+
+
     @Inject
     private Persistence persistence;
 
@@ -48,6 +80,9 @@ class TestDBPersistence extends AbstractCoreIntegrationTest {
         final String uuid1 = UUID.randomUUID().toString();
         final String uuid2 = UUID.randomUUID().toString();
         final DocRef docRef = new DocRef("test-type", "test-uuid", "test-name");
+        final String json1 = String.format(META_JSON_1, uuid1, uuid2);
+        final String json2 = String.format(META_JSON_2, uuid2);
+        final JsonMapper mapper = JsonUtil.getMapper();
 
         // Ensure the doc doesn't exist.
         if (persistence.exists(docRef)) {
@@ -57,30 +92,34 @@ class TestDBPersistence extends AbstractCoreIntegrationTest {
         // Create
         ImportExportDocument importExportDocument = new ImportExportDocument();
         importExportDocument.addExtAsset(
-                new ByteArrayImportExportAsset("meta", DocDataType.JSON, uuid1.getBytes(CHARSET)));
-        persistence.write(docRef, AuditAction.CREATE, null, importExportDocument);
+                new ByteArrayImportExportAsset("meta", DocDataType.JSON, json1.getBytes(CHARSET)));
+        final String version1 = UUID.randomUUID().toString();
+        persistence.write(docRef, AuditAction.CREATE, null, importExportDocument, null, version1);
 
         // Exists
         assertThat(persistence.exists(docRef)).isTrue();
 
         // Read
         importExportDocument = persistence.read(docRef);
-        assertThat(new String(importExportDocument.getExtAssetData("meta"), CHARSET)).isEqualTo(uuid1);
+        assertThat(mapper.readTree(importExportDocument.getExtAssetData("meta")))
+                .isEqualTo(mapper.readTree(json1));
 
         // Update
         importExportDocument = new ImportExportDocument();
         importExportDocument.addExtAsset(
-                new ByteArrayImportExportAsset("meta", DocDataType.JSON, uuid2.getBytes(CHARSET)));
-        persistence.write(docRef, AuditAction.UPDATE, null, importExportDocument);
+                new ByteArrayImportExportAsset("meta", DocDataType.JSON, json2.getBytes(CHARSET)));
+        final String version2 = UUID.randomUUID().toString();
+        persistence.write(docRef, AuditAction.UPDATE, null, importExportDocument, version1, version2);
 
         // Read
         importExportDocument = persistence.read(docRef);
-        assertThat(new String(importExportDocument.getExtAssetData("meta"), CHARSET)).isEqualTo(uuid2);
+        assertThat(mapper.readTree(importExportDocument.getExtAssetData("meta")))
+                .isEqualTo(mapper.readTree(json2));
 
         // List
         final List<DocRef> refs = persistence.list(docRef.getType());
         assertThat(refs.size()).isEqualTo(1);
-        assertThat(refs.get(0)).isEqualTo(docRef);
+        assertThat(refs.getFirst()).isEqualTo(docRef);
 
         // Delete
         persistence.delete(docRef, null);
@@ -92,52 +131,23 @@ class TestDBPersistence extends AbstractCoreIntegrationTest {
         final String uuid2 = UUID.randomUUID().toString();
         final DocRef docRef1 = new DocRef("test-type1", uuid1, "test-name1");
         final DocRef docRef2 = new DocRef("test-type2", uuid2, "test-name2");
+        final String json1 = String.format(META_JSON_1, uuid1, uuid2);
+        final String json2 = String.format(META_JSON_2, uuid2);
 
         persistence.delete(docRef1, null);
         persistence.delete(docRef2, null);
 
-        final String metaJson1 = """
-                {
-                  "type": "XSLT",
-                  "uuid": "%s",
-                  "name": "EMBEDDED XSLT (translationFilter)",
-                  "version": "ba97a81f-c8e6-4d34-8ea8-a9808e89ced4",
-                  "createTimeMs": 1769686495941,
-                  "updateTimeMs": 1769686587789,
-                  "createUser": "admin",
-                  "updateUser": "admin",
-                  "embeddedIn": {
-                    "type": "Pipeline",
-                    "uuid": "%s",
-                    "name": "my pipeline"
-                  }
-                }""";
-
-        final String metaJson2 = """
-                {
-                  "type": "Pipeline",
-                  "uuid": "%s",
-                  "name": "Pipeline",
-                  "version": "ba97a81f-c8e6-4d34-8ea8-a9808e89ced4",
-                  "createTimeMs": 1769686495941,
-                  "updateTimeMs": 1769686587789,
-                  "createUser": "admin",
-                  "updateUser": "admin"
-                }""";
-
         // Create
         final ImportExportDocument ieDoc1 = new ImportExportDocument();
-        ieDoc1.addExtAsset(new ByteArrayImportExportAsset("meta", DocDataType.JSON,
-                String.format(metaJson1, uuid1, uuid2).getBytes(CHARSET)));
-        persistence.write(docRef1, AuditAction.CREATE, null, ieDoc1);
+        ieDoc1.addExtAsset(new ByteArrayImportExportAsset("meta", DocDataType.JSON, json1.getBytes(CHARSET)));
+        persistence.write(docRef1, AuditAction.CREATE, null, ieDoc1, null, UUID.randomUUID().toString());
 
         final ImportExportDocument ieDoc2 = new ImportExportDocument();
-        ieDoc2.addExtAsset(new ByteArrayImportExportAsset("meta", DocDataType.JSON,
-                String.format(metaJson2, uuid2).getBytes(CHARSET)));
-        persistence.write(docRef2, AuditAction.CREATE, null, ieDoc2);
+        ieDoc2.addExtAsset(new ByteArrayImportExportAsset("meta", DocDataType.JSON, json2.getBytes(CHARSET)));
+        persistence.write(docRef2, AuditAction.CREATE, null, ieDoc2, null, UUID.randomUUID().toString());
 
         final List<DocRef> docRefs = persistence.findDocRefsEmbeddedIn(docRef2);
         assertThat(docRefs.size()).isEqualTo(1);
-        assertThat(docRefs.get(0)).isEqualTo(docRef1);
+        assertThat(docRefs.getFirst()).isEqualTo(docRef1);
     }
 }
